[package]
name = "assignment-02-part02"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.13.1", features = ["canvas", "tokio", "advanced", "image", "svg"]}
rxrust = "1.0.0-beta.0"
regex = "1.11.1"
walkdir = "2.5.0"
tokio = { version = "1.45", features = ["sync"]}
lazy_static = "1.5.0"
mermaid-rs = "0.1.1"
xmltree = "0.11.0"